--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
+    "lodash": "^4.17.21",
+    "nuxt": "^2.15.3",
+    "querystring": "^0.2.1"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.3",
