--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/style-resources": "^1.0.0",
     "@vue/test-utils": "^1.1.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
@@ -33,6 +34,9 @@
     "eslint-plugin-vue": "^7.7.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "sass": "^1.26.10",
+    "sass-loader": "^10.0.2",
+    "sass-mq": "^5.0.1",
     "ts-jest": "^26.5.4",
     "vue-jest": "^3.0.4"
   }
