--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/style-resources": "^1.0.0",
     "@types/lodash": "^4.14.168",
+    "@types/socket.io": "^2.1.13",
     "@vue/test-utils": "^1.1.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
