--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,9 @@
     },
     "types": [
       "@nuxt/types",
-      "@types/node"
+      "@types/node",
+      "@types/socket.io",
+      "@types/lodash"
     ]
   },
   "exclude": [
