--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "core-js": "^3.9.1",
     "lodash": "^4.17.21",
     "nuxt": "^2.15.3",
-    "querystring": "^0.2.1"
+    "querystring": "^0.2.1",
+    "vee-validate": "^3.4.5",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.3",
@@ -24,6 +26,7 @@
     "@nuxtjs/style-resources": "^1.0.0",
     "@types/lodash": "^4.14.168",
     "@types/socket.io": "^2.1.13",
+    "@types/zxcvbn": "^4.4.1",
     "@vue/test-utils": "^1.1.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
