--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   },
   "dependencies": {
     "core-js": "^3.9.1",
+    "debug": "^4.3.1",
     "lodash": "^4.17.21",
     "nuxt": "^2.15.3",
     "querystring": "^0.2.1",
+    "socket.io": "^4.0.1",
+    "socket.io-client": "^4.0.1",
     "vee-validate": "^3.4.5",
     "zxcvbn": "^4.4.2"
   },
