--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.9.1",
     "debug": "^4.3.1",
     "lodash": "^4.17.21",
+    "mongodb": "^3.6.5",
     "nuxt": "^2.15.3",
     "querystring": "^0.2.1",
     "socket.io": "^4.0.1",
