--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@nuxtjs/eslint-config-typescript": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/style-resources": "^1.0.0",
+    "@types/debug": "^4.1.5",
     "@types/lodash": "^4.14.168",
     "@types/socket.io": "^2.1.13",
+    "@types/socket.io-client": "^1.4.36",
     "@types/zxcvbn": "^4.4.1",
     "@vue/test-utils": "^1.1.3",
     "babel-core": "7.0.0-bridge.0",
