--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nuxtjs/style-resources": "^1.0.0",
     "@types/debug": "^4.1.5",
     "@types/lodash": "^4.14.168",
+    "@types/mongodb": "^3.6.12",
     "@types/socket.io": "^2.1.13",
     "@types/socket.io-client": "^1.4.36",
     "@types/zxcvbn": "^4.4.1",
