--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^3.6.5",
     "nuxt": "^2.15.3",
     "querystring": "^0.2.1",
+    "simplebar": "^5.3.0",
     "socket.io": "^4.0.1",
     "socket.io-client": "^4.0.1",
     "vee-validate": "^3.4.5",
